K8s/authserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: authserver
  name: authserver
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: authserver
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/authnetwork: "true"
        io.kompose.service: authserver
    spec:
      containers:
      - image: docker.io/alesantonocito/dsbd_project-authserver
        imagePullPolicy: ""
        name: authserver
        ports:
        - containerPort: 8081
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
