K8s/mysqlmain-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: mysqlmain
  name: mysqlmain
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mysqlmain
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/mynetwork: "true"
        io.kompose.service: mysqlmain
    spec:
      containers:
      - env:
        - name: MYSQL_ROOT_PASSWORD
          value: tuapassword
        image: mysql
        imagePullPolicy: ""
        name: mysqlmain
        ports:
        - containerPort: 3306
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
