K8s/mainserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: mainserver
  name: mainserver
spec:
  type: NodePort
  ports:
  - name: "25536"
    port: 25536
    targetPort: 25536
    nodePort: 30001
  selector:
    io.kompose.service: mainserver
status:
  loadBalancer: {}
