K8s/mysqlaut-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: mysqlaut
  name: mysqlaut
spec:
  ports:
  - name: "3307"
    port: 3307
    targetPort: 3307
  selector:
    io.kompose.service: mysqlaut
status:
  loadBalancer: {}
