K8s/mysqlmetrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: mysqlmetrics
  name: mysqlmetrics
spec:
  ports:
  - name: "3308"
    port: 3308
    targetPort: 3308
  selector:
    io.kompose.service: mysqlmetrics
status:
  loadBalancer: {}
