K8s/mynetwork-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: mynetwork
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/mynetwork: "true"
  podSelector:
    matchLabels:
      io.kompose.network/mynetwork: "true"
